--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.15.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -21,6 +23,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.542.0",
     "next": "14.2.32",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
